@@ -897,20 +897,20 @@
 534,700:1400:2100:2800:3500:4200:4900:5600:6300:7000,0,0,0,0
 //-- NJ_KAENSIN
 535,6000:5500:5000:4500:4000:3500:3000:2500:2000:1500,1000,0,20000,0,
-//-- NJ_BAKUENRYU
+//-- NJ_BAKUENRYU // Cast and Delay taken from lvl5 (need to confirm it's not influenced by lvl)
 536,3000,2000,0,0,0
 //-- NJ_HYOUSENSOU
 537,700:1400:2100:2800:3500:4200:4900:5600:6300:7000,0,0,0,0
-//-- NJ_SUITON
-538,3300:3200:3100:3000:2900:2800:2700:2600:2500:2400,0,0,15000:20000:25000:30000:35000:40000:45000:50000:55000:60000,15000:20000:25000:30000:35000:40000:45000:50000:55000:60000
-//-- NJ_HYOUSYOURAKU // Cast time taken from jA (not reliable, must be checked)
+//-- NJ_SUITON // Delay unknown (if there is one)
+538,3000,0,0,15000:20000:25000:30000:35000:40000:45000:50000:55000:60000,15000:20000:25000:30000:35000:40000:45000:50000:55000:60000
+//-- NJ_HYOUSYOURAKU // Cast time and Delay taken from jA (not reliable, must be checked)
 539,3000,1000:1200:1400:1600:1800:2000:2200:2400:2600:2800,0,0,10000:11000:12000:13000:14000:15000:16000:17000:18000:19000
 //-- NJ_HUUJIN
 540,700:1400:2100:2800:3500:4200:4900:5600:6300:7000,0,0,0,0
-//-- NJ_RAIGEKISAI
-541,3700:3400:3100:2800:2500,0,0,0,0 // Not sure of cast but very litely to be correct (English Translation Project)
-//-- NJ_KAMAITACHI
-542,3000,2000,0,0,0 // Cast and delay unknown > temp values taken from NJ_BAKUENRYU
+//-- NJ_RAIGEKISAI // Cast and Delay must be checked (Seems to be more 4s at lvl1. Don't have other lvls)
+541,3700:3400:3100:2800:2500,0,0,0,0
+//-- NJ_KAMAITACHI // Cast and delay unknown > temp values taken from NJ_BAKUENRYU
+542,3000,2000,0,0,0
 //-- NJ_NEN
 543,5000:4000:3000:2000:1000,0,0,30000:45000:60000:75000:90000,30000:45000:60000:75000:90000
 //-- NJ_ISSEN // cast and delay unknown > temp values taken from MO_EXTREMITYFIST
